# Comic

./: CLAUDE.md  ISSUE.md  PLAN.md  README.md  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_system.rs  image_handler.rs  lib.rs  main.rs  storage.rs  zip_handler.rs
src/components/: BookmarksPanel.vue  ComicImage.vue  ComicToolbar.vue  ComicViewer.vue  FileTree.vue  FileTreeNode.vue  SettingsPanel.vue  ThemeToggle.vue
src/composables/: index.ts  useImageLoader.ts  useScrollManager.ts
src/stores/: bookmarks.ts  comic.ts  index.ts  settings.ts
src/types/: index.ts
