[package]
name = "comic"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "comic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
walkdir = "2"
natord = "1.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp"] }
tokio = { version = "1", default-features = false, features = ["fs", "io-util"] }

[profile.release]
# 平衡编译速度和产物大小
opt-level = "z"          # 优化大小
lto = "thin"             # 薄 LTO，比 full LTO 快很多
codegen-units = 16       # 并行代码生成，加快编译
panic = "abort"          # 不使用 unwind，减少体积
strip = true             # 去除符号表

# 最小体积 profile（可选，用 cargo build --profile release-min）
[profile.release-min]
inherits = "release"
lto = true               # 完整 LTO
codegen-units = 1        # 单代码单元，最佳优化

